# youbot_service_robot

./: .gitignore  README.md  frames_2025-12-25_15.47.13.gv
log/: latest_build
yolomsgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
yolomsgs/msg/: HumanPosition.msg  HumanPositionArray.msg
youbot_description/: .gitignore  CMakeLists.txt  PROJECT_LOG.ipynb  PROJECT_LOG_2025-12-13.md  README.md  gazebo.ros2planar.urdf  setup.py
youbot_description/config/: my_controllers.yaml
youbot_description/launch/: gazebo.launch.py  rviz.launch.py
youbot_description/meshes/sensors/: asus_xtion_pro_live_base.stl  (+5 more)
youbot_description/mujoco/: README.md  convert.py  convert_meshes.py  view_mujoco.py  youbot.xml  youbot_temp.urdf
youbot_description/robots/: youbot.urdf.xacro  youbot_arm_only.urdf.xacro  youbot_base_only.urdf.xacro  youbot_dual_arm.urdf.xacro
youbot_description/rviz/: view.rviz
youbot_description/sdf/: empty_world.sdf
youbot_description/urdf/: youbot.urdf  youbot_dae.urdf.backup  youbot_mujoco.urdf
youbot_description/youbot_description/: print.py
youbot_manipulation/: CMakeLists.txt  README.md  setup.py
youbot_manipulation/config/: arm_controller.yaml
youbot_manipulation/launch/: manipulation.launch.py
youbot_navigation/: README.md
youbot_navigation/launch/: slam.launch.py
youbot_perception/: CMakeLists.txt  package.xml  setup.py
youbot_perception/launch/: perception.launch.py
youbot_perception/youbot_perception/: follow_human.py  human_position_pub.py  image.py  yolo_detector.py  yolo_ros2_pt.py  yolov8_ros2_subscriber.py
(+26 files in other folders)
